feat(knowledge): add indicators for boolean flag

--- a/column_semantics/core/knowledge/roles.yml
+++ b/column_semantics/core/knowledge/roles.yml
@@ -12,7 +12,10 @@ foreign_key:
 metric:
   description: "Numeric value used for measurement or aggregation"
 
-flag:
+flag: [is, has, active, enabled, deleted]
+
+is_active:
+  meaning: "boolean flag"
   description: "Boolean indicator"
   common_patterns:
     - "is_"
